# pypinn

./: .gitignore  README.md
data/: __init__.py  data.ipynb  data_generator.py
examples/: data.ipynb
pinndata/: pyproject.toml
pinndata/pinndata/: __init__.py
pinndata/pinndata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypinn/: pyproject.toml
