[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypinn"
version = "0.1.0"
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Joshua Hellewell", email = "jhellewell1722@gmail.com"}
]
license = {text = "MIT"}
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]